fix up manual otel example app